# pipeline-platform

./: .gitignore  CHANGELOG.md  README.md  ai-agent-pipeline-architectures.md  install.sh  pipeline-engineering-plan.md  pyproject.toml
docs/: DSL_REFERENCE.md  MIGRATION.md
examples/: complex-pipeline.yaml  simple-pipeline.yaml
examples/ci/: github-actions.yml  pre-commit.sh
src/pipeline_cli/: __init__.py  auditor.py  cli.py  creator.py  fixer.py  generator.py  inheritance.py  models.py  parser.py  validator.py
tests/: self_check.sh  test_core.py
